Ignore virtualenv files and directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
+.Python
+bin/
 build/
 dist/
+docs/build/
+include/
+lib/
+share/
 *.egg-info
 *.pyc
 *.class
-
 .DS_Store
 *.tmproj
-
-docs/build/
 .coverage
-
